tests/snapshots/run_wpt_conformance__coreml_lesserOrEqual_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser_or_equal.https.any.js lesserOrEqual float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983293943_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([36, 200, 112, 194, 139, 198, 83, 184, 106, 197, 149, 69, 2, 62, 152, 70, 246, 200, 35, 199, 234, 196, 146, 200, 180, 72, 234, 200, 6, 192, 153, 198, 34, 200, 36, 72, 149, 62, 242, 189, 0, 197, 94, 187, 184, 200, 232, 72]);
    operand_1: f16[24] @bytes([128, 69, 17, 63, 162, 193, 12, 198, 192, 72, 52, 192, 20, 196, 80, 69, 245, 40, 235, 180, 250, 68, 237, 66, 78, 72, 14, 62, 5, 64, 248, 180, 63, 196, 26, 195, 49, 193, 0, 197, 61, 66, 218, 72, 198, 72, 49, 198]);
  }

  nodes {
    [output] = lesserOrEqual(operand_0, operand_1, label="");
  }

  outputs { output; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983293943_0.mlmodelc/model.mil:7:12: Storage Reader expects file format version 2..
