tests/snapshots/run_wpt_conformance__coreml_linear_float16_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
linear.https.any.js linear float16 3D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'linearInput' must be of rank 2, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    linearInput: f16[2, 3, 4];
  }

  nodes {
    [linearOutput] = linear(linearInput, alpha=1.0, beta=0.0, label="");
  }

  outputs { linearOutput; }
}
