tests/snapshots/run_wpt_conformance__coreml_linear_float32_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
linear.https.any.js linear float32 0D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: MultiArray shape (1) does not match the shape (24) specified in the model description

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    linearInput: f32[];
  }

  nodes {
    [linearOutput] = linear(linearInput, alpha=1.0, beta=0.0, label="");
  }

  outputs { linearOutput; }
}
